syntax = "proto2";

package fs.proto;



message Task{
	enum TaskStatus{
		UPLOAD_INIT				= 0;
    		UPLOADING				= 1;
    		UPLOADED				= 2;
    		UPLOAD_PAUSED				= 3;
    		UPLOAD_PAUSING				= 4;
    		UPLOAD_RESUME				= 5;

    		DOWNLOAD_INIT				= 6;
    		DOWNLOADING				= 7;
    		DOWNLOADED				= 8;
    		DOWNLOAD_PAUSED				= 9;
    		DOWNLOAD_PAUSING			= 10;
    		DOWNLOAD_RESUME				= 11;

    		CANCELED_PAUSED				= 12;	// when a task is canceled from UPLOAD_PAUSED/DOWNLOAD_PAUSED
    		CANCELED_WORKING			= 13;	// when a task is canceled from UPLOADING/DOWNLOADING
	}
	required uint64 	task_id			= 1;
	optional uint64		client_id		= 2;
	optional string 	localbasepath		= 3;
	required string 	remotebasepath		= 4;
	required string 	filename		= 5;
	required uint64		total_packet_no		= 6;
	required TaskStatus	task_status		= 7;
	optional uint64 	received_packet_no	= 8;
	optional uint64 	sent_packet_no		= 9;
	optional uint64		last_packet_time	= 10;

}

message Tasks{
	repeated Task task			= 1;
}


